Fixed mouse ray position for scaling